[package]
name = "rust_website_monitor"
version = "0.1.0"
authors = ["Andy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-files = "0.1"
serde = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.12"
cron = "0.6.0"
chrono = "0.4"
tokio = "0.2.0-alpha.6"
futures = "0.3.1"
ssl-expiration = { git = "https://github.com/doggor/ssl-expiration.git", branch="add-hostname-support" }
rusqlite = { version = "0.20.0", features = ["bundled"] }
